--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
   <!-- SECTION 5: Guru Message -->
   <section class="section guru" id="guru">
     <div class="container">
-      <div class="badge reveal">Guru Margdarshan</div>
+      <div style="display: none;" class="badge reveal">Guru Margdarshan</div>
       <div class="guru-grid">
         <div class="reveal">
           <h2 class="section-title">Sankalp ke bina nasha chhodna mushkil hai</h2>
@@ -1790,4 +1790,5 @@
   </script>
 </body>
 </html>
+
 
