--- a/index.html
+++ b/index.html
@@ -924,8 +924,36 @@
         backdrop-filter: none;
       }
     }
-  </style>
-</head>
+    /* =========================
+       MOBILE HEADER: Single Line
+       ========================= */
+    @media (max-width: 980px){
+
+      .topbar-inner{
+        flex-wrap: nowrap !important;   /* wrap band */
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .brand img{
+        height: 28px;   /* logo thoda compact */
+      }
+
+      .top-cta{
+        width: auto !important;
+        flex-wrap: nowrap !important;
+        gap: 6px;
+      }
+
+      .top-cta .btn{
+        padding: 8px 10px;
+        font-size: 12px;
+        border-radius: 999px;
+        white-space: nowrap;
+      }
+    }
+      </style>
+    </head>
 
 <body>
 
@@ -1840,6 +1868,7 @@
   </script>
 </body>
 </html>
+
 
 
 
