--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,81 @@
       </div>
     </div>
   </section>
+ 
+  <!-- SECTION: Liquid Offer -->
+  <section class="section" id="offer-liquid">
+    <div class="container">
+      <h2 class="section-title reveal">
+        Ab wahi Special Offer <br> Addiction Killer Liquid mein bhi!
+      </h2>
+
+      <p class="section-sub reveal">
+        Agar aap powder ke bajaye <b>Liquid (taral form)</b> prefer karte hain,
+        to aapke liye bhi <b>same offer + COD</b> available hai.
+      </p>
+
+      <div class="product-page reveal">
+        <div class="gallery-card">
+          <!-- Liquid product image -->
+          <img class="main-img" src="Images/addiction-liquid.png" alt="Addiction Killer Liquid">
+       </div>
+
+        <div class="pdetails">
+          <div class="pill">✅ COD Available • India-wide Delivery</div>
+
+          <h3>
+            Addiction Killer Liquid <br>
+            Special Offer Pack
+          </h3>
+
+          <p class="desc">
+            Kai logon ke liye <b>Liquid form lena zyada easy hota hai</b>,
+            specially jab cravings, restlessness ya ghabrahat zyada ho.
+            Hamari team aapko call par <b>sahi dosage aur pack</b> suggest karegi.
+          </p>
+
+          <div class="mini-tags">
+            <div class="mtag">✅ Same Offer</div>
+            <div class="mtag">✅ Liquid Option</div>
+            <div class="mtag">✅ Expert Guidance</div>
+            <div class="mtag">✅ Privacy Safe</div>
+          </div>
+
+          <div class="price-row" style="display:flex;align-items:center;gap:12px;flex-wrap:wrap;margin:14px 0 6px;">
+            <div class="cut" style="color:#6b7280;text-decoration:line-through;font-weight:800;font-size:18px;">
+              ₹____
+            </div>
+            <div class="now" style="font-size:34px;font-weight:900;color:#0f172a;letter-spacing:-.3px;">
+              ₹____
+            </div>
+            <div class="save" style="background:#ff6a3d;color:#fff;font-weight:900;padding:7px 10px;border-radius:8px;font-size:13px;">
+              Save ₹____
+            </div>
+          </div>
+
+          <div class="delivery" style="display:flex;gap:10px;align-items:center;margin:10px 0 2px;color:#0f172a;font-weight:800;">
+            🚚 Cash on Delivery | All India Delivery Available
+          </div>
+
+          <p class="note">
+            *Liquid pack ka price aur availability city aur running offer ke hisaab se
+            thoda change ho sakta hai. Exact details hamari team call par batayegi.
+          </p>
+
+          <!-- ONLY CALL CTA -->
+          <div class="pcta" style="display:grid;grid-template-columns:1fr;gap:12px;margin-top:16px;">
+            <button class="btn btn-orange" onclick="openModal()">
+              📞 Liquid ke liye Call Back Book Karein
+            </button>
+          </div>
+
+          <p class="note" style="margin-top:10px;">
+            👉 Aap powder ya liquid — dono options mein se apne liye sahi choose kar sakte hain.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- GALLERY 2 -->
   <section class="section gallery-wrap" id="gallery-2">
@@ -1868,6 +1943,7 @@
   </script>
 </body>
 </html>
+
 
 
 
