--- a/index.html
+++ b/index.html
@@ -1412,13 +1412,13 @@
 
           <div class="price-row" style="display:flex;align-items:center;gap:12px;flex-wrap:wrap;margin:14px 0 6px;">
             <div class="cut" style="color:#6b7280;text-decoration:line-through;font-weight:800;font-size:18px;">
-              ₹____
+              ₹4781
             </div>
             <div class="now" style="font-size:34px;font-weight:900;color:#0f172a;letter-spacing:-.3px;">
-              ₹____
+              ₹2799
             </div>
             <div class="save" style="background:#ff6a3d;color:#fff;font-weight:900;padding:7px 10px;border-radius:8px;font-size:13px;">
-              Save ₹____
+              Save ₹1982
             </div>
           </div>
 
@@ -1943,6 +1943,7 @@
   </script>
 </body>
 </html>
+
 
 
 
